# bullerby-chat

./: .gitignore  AGENTS.md  bullerby-chat.code-workspace
docs/: firmware-plan.md  product-description.md  project-plan.md  repo-structure.md  ui-spec.md
firmware/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
firmware/main/: CMakeLists.txt  Kconfig.projbuild  board_config.h  idf_component.yml  main.c
firmware/main/app/: app_audio.h  ui_app.c  ui_app.h
firmware/main/assets/: family_emoji_assets.c  family_emoji_assets.h
firmware/main/audio/: audio.c  audio.h
firmware/main/fonts/: fonts.h  lv_font_montserrat_14_latin1.c  lv_font_montserrat_20_latin1.c
firmware/main/hal/: codec.c  display.c  display.h  es8311.c  es8311.h  hal.h  led.c  led.h  power.c  touch.c  touch.h
firmware/main/model/: model_families.c  model_families.h  model_messages.c  model_messages.h
firmware/main/net/: api_client.c  api_client.h  dns_server.c  dns_server.h  identity.c  identity.h  net.c  net.h  wifi.c  wifi.h  wifi_portal.c  wifi_portal.h  ws_client.c  ws_client.h
firmware/main/ui/: ui.c  ui.h
scripts/: gen_family_emoji_assets.py
server/: .dev.vars.example  .gitignore  README.md  env.d.ts  package-lock.json  package.json  tsconfig.json  vitest.config.mts  worker-configuration.d.ts  wrangler.toml
server/config/: README.md  bullerby.json
server/scripts/: e2e-full.mjs  run-e2e-with-dev.mjs
server/src/: auth.ts  config-store.ts  config.ts  index.ts  types.ts
server/test/: README.md  auth.test.ts  constants.ts  worker.test.ts
(+1 files in other folders)
