idf_component_register(
    SRC_DIRS
        "."
        "assets"
        "fonts"
        "hal"
        "audio"
        "net"
        "app"
        "model"
    INCLUDE_DIRS
        "."
        "assets"
        "fonts"
        "hal"
        "audio"
        "net"
        "app"
        "model"
    PRIV_REQUIRES
        driver
        esp_lcd
        esp_timer
        esp_wifi
        esp_event
        esp_netif
        nvs_flash
        esp_driver_ledc
        esp_adc
        spi_flash
        app_update
        esp-tls
        esp_http_client
        esp_websocket_client
        mbedtls
        json
)
